# PathogenIQ

./: .gitignore  CLAUDE.md  Documentation.md  LICENSE  README.md  Version.md  environment.yml  pathogeniq_report.html  pyproject.toml  todo.md
docs/: air-concordance-validation-2026-06-22.md  air-datasets-2026-06-22.md  air-open-world-detection-2026-06-23.md  air-pathogen-wedge-design-2026-06-22.md  benchmark-results-2026-06-21.md  coverage-exploration-2026-06-21.md  dispersion-validation-2026-06-22.md  novelty-threshold-validation-2026-07-01.md
pathogeniq/: align.py  amr.py  assembly.py  background.py  benchmark.py  cli.py  config.py  contaminants.py  coverage.py  crossmap.py  em.py  host_remove.py  html_report.py  novelty.py  pathogenicity.py  pdf_report.py  qc.py  quantify.py  report.py  sketch.py  viral.py
scripts/: 01_download_zymo_db.sh  02_download_tier1_db.py  03_download_human_ref.sh  03a_download.sh  04_download_validation_data.py  05_select_kitome_controls.py  06_benchmark.py  07_build_kraken_db.py  08_heldout_pr_auc.py  09_reads_mapping_truth.py  10_validate_dispersion.py  11_pool_blank_background.py  12_viral_insilico_spikein.py  13_setup_viral_env.sh  15_setup_mag_env.sh  16_run_air_assemble.sh  README.md  build_background_default.py
tests/: conftest.py  test_align.py  test_amr.py  test_assembly.py  test_background.py  test_benchmark.py  test_cli.py  test_config.py  test_contaminants.py  test_coverage.py  test_crossmap.py  test_download_validation.py  test_em.py  test_host_remove.py  test_html_report.py  test_novelty.py  test_pathogenicity.py  (+7 more)
(+5 files in other folders)
