[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pathogeniq"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "pysam>=0.22",
    "pandas>=2.2",
]

[project.scripts]
pathogeniq = "pathogeniq.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["pathogeniq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires external tools and large data files (deselect with '-m not integration')",
]
